--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,26 @@
 2004-05-04  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/channels-commands.c
+	* app/actions/gradient-editor-commands.c
+	* app/actions/image-commands.c
+	* app/actions/layers-commands.c
+	* app/actions/qmask-commands.c
+	* app/actions/templates-commands.c
+	* app/actions/vectors-commands.c
+	* app/display/gimpdisplayshell-filter-dialog.c
+	* app/gui/convert-dialog.c
+	* app/gui/module-browser.c
+	* app/gui/offset-dialog.c
+	* app/gui/palette-import-dialog.c
+	* app/gui/resize-dialog.c
+	* app/gui/resolution-calibrate-dialog.c
+	* app/gui/tips-dialog.c
+	* app/gui/user-install-dialog.c
+	* app/widgets/gimpwidgets-utils.c
+	* libgimpwidgets/gimpquerybox.c: set dialog border spacing to 12.
+
+2004-05-04  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/preferences-dialog.c
 	* app/widgets/widgets-enums.[ch]
 	* app/widgets/gimpwidgets-utils.c (gimp_window_set_hint): added
