--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-04  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/file-dialog-actions.c (file_dialog_actions_setup):
+	don't forget to set the action's accelerator.
+
 2004-05-04  Sven Neumann  <sven@gimp.org>
 
 	* app/actions/channels-commands.c
