--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpframe.c (gimp_frame_size_allocate): allocate
+	the full width for the label widget, looks better and is more
+	convenient to use with activatable widgets such as toggle buttons.
+
 2004-05-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpfiledialog.c: removed debugging output, added
