2004-05-04  Michael Natterer  <mitch@gimp.org>
	* app/gui/menus.c: register a <Dock> UI manager which has all
	action groups <Image> has except "view".

	* app/widgets/gimpimagedock.[ch]: re-enabled the global shortcuts,
	using UI manager instead of item factory. Unfortunately actions
	without proxy widgets can't be activated so this change is pretty
	useless. Oh well, will find a hack to work around this later...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13147 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-05-04  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/menus.c: register a <Dock> UI manager which has all
+	action groups <Image> has except "view".
+
+	* app/widgets/gimpimagedock.[ch]: re-enabled the global shortcuts,
+	using UI manager instead of item factory. Unfortunately actions
+	without proxy widgets can't be activated so this change is pretty
+	useless. Oh well, will find a hack to work around this later...
+
 2004-05-04  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpblendoptions.c
