2004-05-05  Jakub Steiner <jimmac@ximian.com>
* data/images/gimp_splash.png: ustable splash


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13148 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-05  Jakub Steiner <jimmac@ximian.com>
+
+	* data/images/gimp_splash.png: ustable splash
+
 2004-05-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/menus.c: register a <Dock> UI manager which has all
