2004-05-05  Sven Neumann  <sven@gimp.org>
	* app/gui/info-dialog.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimplevelstool.c: use GimpFrame widgets, changed spacings.

	* app/widgets/gimptexteditor.c: tweaked.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13149 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-05-05  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/info-dialog.c
+	* app/tools/gimpcolorbalancetool.c
+	* app/tools/gimpcolorizetool.c
+	* app/tools/gimpcurvestool.c
+	* app/tools/gimphuesaturationtool.c
+	* app/tools/gimpimagemaptool.c
+	* app/tools/gimplevelstool.c: use GimpFrame widgets, changed spacings.
+
+	* app/widgets/gimptexteditor.c: tweaked.
+
 2004-05-05  Jakub Steiner <jimmac@ximian.com>
 
 	* data/images/gimp_splash.png: ustable splash
