2004-05-05  Michael Natterer  <mitch@gimp.org>
	Finally enable global accelerators in all docks:

	* app/widgets/gimpimagedock.c (gimp_image_dock_constructor):
	iterate all of the UI manager's actions and enable their
	accelerators manually. Fixes bug #119878.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13152 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-05  Michael Natterer  <mitch@gimp.org>
+
+	Finally enable global accelerators in all docks:
+
+	* app/widgets/gimpimagedock.c (gimp_image_dock_constructor):
+	iterate all of the UI manager's actions and enable their
+	accelerators manually. Fixes bug #119878.
+
 2004-05-05  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpviewabledialog.c: added construct properties to
