2004-05-05  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimphelpui.c: documentation.

2004-05-05  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt: updated.

	* devel-docs/libgimpwidgets/tmpl/gimpframe.sgml
	* devel-docs/libgimpwidgets/tmpl/gimphelpui.sgml
	* devel-docs/libgimpwidgets/tmpl/gimpoffsetarea.sgml: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13153 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-05  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimphelpui.c: documentation.
+
 2004-05-05  Michael Natterer  <mitch@gimp.org>
 
 	Finally enable global accelerators in all docks:
