--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-05  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-05-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
