--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-06  Sven Neumann  <sven@gimp.org>
+
+	* app/menus/menus.c: no need for including gimp-intl.h.
+
 2004-05-06  Michael Natterer  <mitch@gimp.org>
 
 	* configure.in
