--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-06  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt: added gimp_plugin_menu_register().
+
+	* devel-docs/libgimp/tmpl/gimpplugin.sgml: regenerated.
+
 2004-05-05  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt: updated.
