--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-06  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/about-dialog.c: center the about dialog on the monitor,
+	not on the screen. Fixes window position on xinerama setups.
+
 2004-05-06  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/plug_in.pdb: renamed gimp_plugin_menu_add() to
