--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-05-06  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpdrawable-preview.c
+	* app/core/gimpimage-projection.c: added sanity so we don't just
+	plain crash when an indexed image doesn't have a colormap.
+
+	* plug-ins/common/png.c: keep at least one entry in the colormap.
+	Fixes bug #142029.
+
 2004-05-06  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/fp/fp_gdk.c
