2004-05-06  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/pdb/app.pl: make libgimp* headers always included
        before any app headers.

        * tools/pdbgen/pdb/paint_tools.pdb: Fix silly "Dodgebure" typo.

        * app/pdb/*_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13179 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-05-06  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/pdb/app.pl: make libgimp* headers always included
+	before any app headers.
+
+        * tools/pdbgen/pdb/paint_tools.pdb: Fix silly "Dodgebure" typo.
+
+	* app/pdb/*_cmds.c: regenerated.
+
 2004-05-06  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpdrawable-preview.c
