--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-07  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: removed plug-ins/fp/fp_gtk.c
+
 2004-04-24  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
