2004-05-07  Michael Natterer  <mitch@gimp.org>
	* de.po: updated a bit after menu registration cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13186 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,5 +1,9 @@
 2004-05-07  Michael Natterer  <mitch@gimp.org>
 
+	* de.po: updated a bit after menu registration cleanup.
+
+2004-05-07  Michael Natterer  <mitch@gimp.org>
+
 	* POTFILES.in: removed plug-ins/fp/fp_gtk.c
 
 2004-04-24  Christophe Merlet  <redfox@redfoxcenter.org>
